--- a/Source/WPF/MyMoney/Dialogs/PickYearDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/PickYearDialog.xaml
@@ -1,8 +1,12 @@
 ﻿<Window x:Class="Walkabout.Dialogs.PickYearDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Which Year ?" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        Height="154" Width="282" Background="{DynamicResource DialogWindowBackgroundBrush}">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        WindowStartupLocation="CenterOwner" 
+        SizeToContent="Height" Width="300"
+        Title="Which Year ?"        
+        Background="{DynamicResource DialogWindowBackgroundBrush}">
   <Grid Margin="10">
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*"/>
@@ -13,11 +17,11 @@
       <RowDefinition Height="*"/>
       <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
-    <TextBlock Text="Please enter the year" x:Name="Prompt" />
+    <TextBlock Text="Please enter the year" x:Name="Prompt" TextWrapping="Wrap"/>
     
-    <TextBox x:Name="YearText" Grid.Row="1" Background="LemonChiffon" TextChanged="YearText_TextChanged"/>
+    <ComboBox x:Name="YearCombo" Grid.Row="1" Background="LemonChiffon" IsEditable="True" Margin="0,10,0,0"/>
     
-    <StackPanel Orientation="Horizontal" Grid.Row="3"  HorizontalAlignment="Right">
+    <StackPanel Orientation="Horizontal" Grid.Row="3"  HorizontalAlignment="Right" Margin="20">
       <Button Margin="5,0,5,0" MinWidth="50" IsDefault="True" x:Name="OK" Click="OK_Click">_Ok</Button>
       <Button Margin="5,0,5,0" MinWidth="50" IsCancel="True" x:Name="Cancel" Click="Cancel_Click">_Cancel</Button>
     </StackPanel>
