--- a/Source/WPF/MyMoney/View Selectors/SecuritiesControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/SecuritiesControl.xaml
@@ -31,13 +31,16 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 
-                <TextBlock Text="{Binding Name}" 
+                <TextBlock Text="{Binding Name}"
                            Grid.Column="0"
+                           Foreground="{DynamicResource LeftPanelForeground}"
                            TextTrimming="CharacterEllipsis" 
                            ClipToBounds="True"/>
                 
                 <TextBlock Text="{Binding Symbol}" 
                            Grid.Column="1"
+                           Foreground="{DynamicResource LeftPanelForeground}" 
+                           Opacity="0.5"
                            TextTrimming="CharacterEllipsis" 
                            ClipToBounds="True"/>
             </Grid>
