--- a/Source/WPF/OfxTestServer/MainWindow.xaml
+++ b/Source/WPF/OfxTestServer/MainWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="MainWindow"
+﻿<Window x:Class="OfxTestServer.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="OFX Test Server" Height="400" Width="526"
-        x:Name="OFXTestServer"
-        Loaded="OnLoaded" >
+    Title="OFX Test Server" Height="400" Width="725"
+    x:Name="OFXTestServerWindow"
+    Loaded="OnLoaded" >
     <Window.Resources>
         <Style TargetType="TextBox" >
-            <Setter Property="Background" Value="LemonChiffon"/>            
+            <Setter Property="Background" Value="LemonChiffon"/>
         </Style>
     </Window.Resources>
     <Grid>
@@ -17,13 +17,13 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <StackPanel Orientation="Vertical">
-                        <TextBlock Text="User Name:"/>
-                        <TextBox x:Name="UserName" Width="200" HorizontalAlignment="Left" 
+                    <TextBlock Text="User Name:"/>
+                    <TextBox x:Name="UserName" Width="200" HorizontalAlignment="Left" 
                                  Text="{Binding Path=UserName}" GotFocus="OnTextBoxGotFocus"/>
-                        <TextBlock Text="Password:"/>
-                        <TextBox x:Name="Password" Width="200" HorizontalAlignment="Left" 
+                    <TextBlock Text="Password:"/>
+                    <TextBox x:Name="Password" Width="200" HorizontalAlignment="Left" 
                                  Text="{Binding Path=Password}" GotFocus="OnTextBoxGotFocus"/>
-                    
+
                     <RadioButton x:Name="UseAdditionalCredentials" Margin="5,5,0,0" Checked="OnShowAdditionalCredentials" Unchecked="OnHideAdditionalCredentials">Use Additional Credentials</RadioButton>
                     <RadioButton x:Name="AuthTokenRequired" Margin="5,5,0,0" Checked="OnShowAuthTokenQuestions" Unchecked="OnHideAuthTokenQuestions">AuthToken</RadioButton>
                     <RadioButton x:Name="MFAChallengeRequired" Margin="5,5,0,0" Checked="OnShowMFAChallengeQuestions" Unchecked="OnHideMFAChallengeQuestions">MFA Challenge</RadioButton>
@@ -46,7 +46,7 @@
 
                     <TextBlock Text="AuthToken Label:"/>
                     <TextBox x:Name="AuthTokenLabel" Width="200" HorizontalAlignment="Left" GotFocus="OnTextBoxGotFocus" Text="{Binding AuthTokenLabel}"/>
-                    
+
                     <TextBlock Text="AuthToken:"/>
                     <TextBox x:Name="AuthToken" Width="200" HorizontalAlignment="Left" GotFocus="OnTextBoxGotFocus" Text="{Binding AuthToken}"/>
                 </StackPanel>
@@ -60,7 +60,7 @@
                             <DataGridTextColumn Header="Answer" Binding="{Binding Path=PhraseAnswer}"/>
                         </DataGrid.Columns>
                     </DataGrid>
-                    
+
                 </StackPanel>
 
                 <StackPanel x:Name="NewPasswordQuestions" Orientation="Vertical" Grid.Column="1"  Visibility="Collapsed" Margin="10,0,0,0">
